clusters/home/immich/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
  labels:
    app.kubernetes.io/name: immich-postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-postgres
    spec:
      containers:
        - name: postgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvector0.8.0
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 512m
              memory: 1024Mi
            limits:
              cpu: 512m
              memory: 1024Mi
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - immich
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - immich
            initialDelaySeconds: 60
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
spec:
  selector:
    app.kubernetes.io/name: immich-postgres
  ports:
    - port: 5432
      targetPort: 5432
