clusters/home/immich/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-public
spec:
  hostnames:
  - immich.blrobinson.uk
  parentRefs:
  - name: nginx-ingress
    namespace: ingress
    sectionName: https
  rules:
  - backendRefs:
    - name: immich-server
      port: 2283
